Remove get last event from server
